--- a/styles/layouts/_explore-designs.scss
+++ b/styles/layouts/_explore-designs.scss
@@ -80,7 +80,7 @@
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     -ms-overflow-style: none;
-    //scroll-behavior: smooth;
+    scroll-behavior: smooth;
     img {
       flex-shrink: 0;
       width: 100%;
